--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,15 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^2.0.0",
-    "@tanstack/react-query": "^5.0.0",
-    "axios": "^1.6.0",
-    "clsx": "^2.0.0",
+    "@rainbow-me/rainbowkit": "^2.2.8",
+    "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.10.0",
     "ethers": "^6.8.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.0",
+    "pino-pretty": "^13.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.0.0",
     "viem": "^2.0.0",
     "wagmi": "^2.0.0"
   },
@@ -27,12 +26,9 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "autoprefixer": "^10.4.21",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.0.0",
-    "postcss": "^8.5.6",
     "prettier": "^3.0.0",
-    "tailwindcss": "^3.4.17",
     "typescript": "^5.0.0"
   }
 }
